postgres-macros/tests/fail-stable/enum_extra_variant.stderr
error[E0277]: the trait bound `Cols: HasColumn<sqlm_postgres::types::Enum<(EnumVariant<10465144470622129318>, EnumVariant<5755620910692865178>, EnumVariant<16036746858103170191>)>, 18137070463969723500>` is not satisfied
  --> tests/fail-stable/enum_extra_variant.rs:26:59
   |
26 |     let _: Vec<User> = sql!("SELECT id, role FROM users").await.unwrap();
   |                                                          -^^^^^ the trait `HasColumn<sqlm_postgres::types::Enum<(EnumVariant<10465144470622129318>, EnumVariant<5755620910692865178>, EnumVariant<16036746858103170191>)>, 18137070463969723500>` is not implemented for `Cols`
   |                                                          |
   |                                                          help: remove the `.await`
   |
   = help: the following other types implement trait `HasColumn<Type, NAME>`:
             <Cols as HasColumn<i64, 6898215271518772730>>
             <Cols as HasColumn<sqlm_postgres::types::Enum<(EnumVariant<10465144470622129318>, EnumVariant<5755620910692865178>)>, 18137070463969723500>>
note: required for `User` to implement `FromRow<Struct<Cols>>`
  --> tests/fail-stable/enum_extra_variant.rs:18:32
   |
18 | #[derive(Debug, PartialEq, Eq, FromRow)]
   |                                ^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
19 | struct User {
   |        ^^^^
   = note: required for `Vec<User>` to implement `Query<Struct<Cols>>`
   = note: required for `Sql<'_, Struct<Cols>, Vec<User>>` to implement `IntoFuture`
   = note: this error originates in the derive macro `FromRow` (in Nightly builds, run with -Z macro-backtrace for more info)
